# brave-core

browser/resources/tab_search/: BUILD.gn  brave_tab_focus.html.ts  brave_tab_focus.ts  sources.gni
patches/: chrome-browser-resources-tab_search-BUILD.gn.patch
