# Copyright (c) 2024 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# you can obtain one at http://mozilla.org/MPL/2.0/.

brave_tab_search_non_web_component_files = [
  "brave_tab_focus.html.ts",
  "brave_tab_focus.ts",
]

brave_tab_search_preprocess_deps =
    [ "//brave/browser/resources/tab_search:preprocess" ]
